/*
 * $Id: ChangeLog,v 1.5809 2007/12/15 01:44:38 modalsist Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-12-17 09:23 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/pvalue.c
    * Corrected bad typo

2007-12-14 23:40 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/rtl/tbrowse.prg
    ! fixed bug reported by Pavel Tsarenko from comp.lang.xharbour news:
      ( Small Tbrowse incompatibility ). After dbgobottom and forcestable
      the tbrowse is going to phantom record under custom skipblock.

2007-12-12 21:22 UTC+0800 Pritpal Bedi <pritpal@vouchcac.com>
  * contrib/rdd_ads/adsmgmnt.c
    ! Fixed memory leak in HB_FUNC( ADSMGGETLOCKOWNER )
      if ( pstUserInfo )
      {
         hb_xfree( pstUserInfo );
      }

2007-12-08 02:20 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source\vm\arrays.c
    * Correct minor bug in hb_arrayFromParams() when called from function with no stack frame.

  * source\compiler\harbour.slx
  * source\compiler\harbour.sly
  * source\rtl\tclass.prg
  * tests\tstdivert.prg
    * Adjusted DIVERT  syntax to use a FLAG clause:

       DIVERT TO <pFuncPointer>|<pMessagePointer> [OF <oNewSelfOrNil>] FLAGS [<nDivertFlags>]


2007-11-08 11:00 UTC-0300 Luiz Rafael Culik Guimaraes <luiz at xharbour.com.br>
  ! source/rtl/idle.c
    ! fixed problem that make 100% usage on linux on newer kernels

2007-12-07 22:40 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  + tests/tstdivert.prg
    + Sample for new DIVERT syntax

2007-12-07 22:30 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/hvm.c
    ! Fixed typos introduced when hb_stackSetActionRequest() was added which broke FINALLY functionality

  * include/hbapi.h
  * include/hbvmpub.h
  * source/vm/arrays.c
  * source/vm/classes.c
  * source/vm/debug.c
  * source/vm/estack.c
  * source/vm/extend.c