@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5809 2007/12/15 01:44:38 modalsist Exp $
+ * $Id: ChangeLog,v 1.5810 2007/12/17 13:55:30 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2007-12-17 19:10 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
+  * include/hbapirdd.h
+  * source/rdd/wacore.c
+  * source/rdd/workarea.c
+    ! Restored thread-local storage for current work area number/pointer.
+    ! Restored mutex-guarded access to work area list under MT.
 
 2007-12-17 09:23 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
   * source/vm/pvalue.c
